Fix social card texts alignment

--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -108,10 +108,16 @@
   margin-right: 1rem;
 }
 
+.social-text{
+    width: 100%;
+}
+
 .social-text h4 {
   margin: 0;
   font-size: 1.1rem;
   color: black;
+  text-align: center;
+  width: 100%;
 }
 
 .social-text p {
